--- a/1-index.html
+++ b/1-index.html
@@ -20,13 +20,13 @@
             <div class="nav large-nav">
                 <ul>
                     <li>
-                        <a href="#">what we do</a>
+                        <a href="#">What we do</a>
                     </li>
                     <li>
-                        <a href="#">our results</a>
+                        <a href="#">Our results</a>
                     </li>
                     <li>
-                        <a href="#">contact us</a>
+                        <a href="#">Contact us</a>
                     </li>
                 </ul>
             </div>
@@ -40,13 +40,13 @@
                 <div class="nav small-nav">
                     <ul>
                         <li>
-                            <a href="#">what we do</a>
+                            <a href="#">What we do</a>
                         </li>
                         <li>
-                            <a href="#">our results</a>
+                            <a href="#">Our results</a>
                         </li>
                         <li>
-                            <a href="#">contact us</a>
+                            <a href="#">Contact us</a>
                         </li>
                     </ul>
                 </div>
@@ -70,7 +70,7 @@
             </section>
             <!-- What we do -->
             <section class="What-we-do-section section-wrapper">
-                <div class="section-title">What we do...</div>
+                <div class="section-title"> What we do...</div>
                 <div class="section-description">
                     <div class="section-description-content">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
